tests/invalid/UsesExtends.java
class Parent {
    int id;
}

class UsesExtends extends Parent {
    int extra;
}
